<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DoctorCetegoryActivity"
    android:background="@color/colorActivityBackground"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/ColorTolbar"
        app:cardElevation="3dp"
        app:cardMaxElevation="5dp"
        android:layout_alignParentTop="true"
        >
        <ImageView
            android:id="@+id/backButton_doctor_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:tint="@color/colorActivityBackground"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorActivityBackground"
            android:fontFamily="sans-serif-light"
            android:textSize="20sp"
            android:gravity="center"
            />
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            >-->
<!--        </LinearLayout>-->
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/ColorTolbar"
        app:cardElevation="3dp"
        app:cardMaxElevation="5dp"
        android:layout_alignParentBottom="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="3"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/imergencyDoctor"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/callwhite"
                android:layout_gravity="center"
                />
            <ImageView
                android:id="@+id/homeButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/homebutton"
                android:layout_gravity="center"
                />
            <ImageView
                android:id="@+id/profileButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/profile_white"
                android:layout_gravity="center"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardView"
        android:layout_above="@id/cardView1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_margin="10dp"
                    >

                    <Button
                        android:id="@+id/covid_doctor_Button"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/doccovid"
                        android:drawablePadding="5dp"
                        android:background="@color/colorActivityBackground"
                        android:text="@string/covid_string"
                        />
                    <Button
                        android:id="@+id/skin_doctor_Button"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/docskin"
                        android:drawablePadding="5dp"
                        android:background="@color/colorActivityBackground"
                        android:text="@string/skin_string"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_margin="10dp"
                    >

                    <Button
                        android:id="@+id/medicine_doctor_Button"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/docmedicine"
                        android:drawablePadding="5dp"
                        android:background="@color/colorActivityBackground"
                        android:text="@string/medi_string"
                        />
                    <Button
                        android:id="@+id/surgery_doctor_Button"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/docsurgery"
                        android:drawablePadding="5dp"
                        android:background="@color/colorActivityBackground"
                        android:text="@string/surgery_string"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_margin="10dp"
                    >

                    <Button
                        android:id="@+id/eye_doctor_Button"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/doceyes"
                        android:drawablePadding="5dp"
                        android:background="@color/colorActivityBackground"
                        android:text="@string/eye_string"
                        />
                    <Button
                        android:id="@+id/dentist_doctor_Button"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/docdentist"
                        android:drawablePadding="5dp"
                        android:background="@color/colorActivityBackground"
                        android:text="@string/dentist_string"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_margin="10dp"
                    >

                    <Button
                        android:id="@+id/chest_doctor_Button"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/docchest"
                        android:drawablePadding="5dp"
                        android:background="@color/colorActivityBackground"
                        android:text="@string/chest_string"
                        />
                    <Button
                        android:id="@+id/brain_doctor_Button"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/docbrain"
                        android:drawablePadding="5dp"
                        android:background="@color/colorActivityBackground"
                        android:text="@string/brain_string"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_margin="10dp"
                    >

                    <Button
                        android:id="@+id/bones_doctor_Button"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/docbones"
                        android:drawablePadding="5dp"
                        android:background="@color/colorActivityBackground"
                        android:text="@string/bones_string"
                        />
                    <Button
                        android:id="@+id/child_doctor_Button"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/docchild"
                        android:drawablePadding="5dp"
                        android:background="@color/colorActivityBackground"
                        android:text="@string/child_string"
                        />

                </LinearLayout>


            </LinearLayout>



        </LinearLayout>
    </ScrollView>



</RelativeLayout>